# llm-php-ext

./: .gitignore  AUTO_DETECTION.md  BUILDCONF_FIX.md  BUILD_WITH_PHP.md  CHANGELOG.md  CHANGES.md  CI.md  Cargo.toml  DEBUG_SYMBOLS.md  FINAL_SOLUTION.md  GLIBC_COMPATIBILITY.md  GLIBC_QUICK_FIX.md  GLIBC_REAL_SOLUTION.md  IMPLEMENTATION_REPORT.md  INSTRUCTIONS.md  LICENSE  Makefile  Makefile.frag  PHP_NEW_EXTENSION_PLACEMENT_FIX.md  QUICK_REFERENCE.md  README.md  REGISTRATION_CORRECT_FIX.md  SOLUTION_SUMMARY.md  STATIC_REGISTRATION_FIX.md  STUB_FILE_SOLUTION.md  TESTING_PLAN.md  build.rs  config.m4  llm_stub.c  php_llm.h  test_detection.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  basic_completion.php  demo.php  fluent_interface.php  multi_turn.php  quick_demo.php  structured_output.php  tool_calling.php
php/: llm.php
src/: convert.rs  error.rs  lib.rs  llm_class.rs  message.rs  structured_builder.rs  tool_builder.rs
tests/: ExceptionTest.php  LLMTest.php  MessageTest.php  ToolTest.php  run_tests.php  serialization_tests.rs
